메뉴관리 그리드 트리구조 적용 및 아이콘 참조추가

--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -14,9 +14,7 @@
 		<link rel="stylesheet" href="css/jquery-ui-1.13.3/jquery-ui.css" type="text/css" />
 		<link rel="stylesheet" href="js/slickgrid/dist/styles/css/slick.grid.css" type="text/css" />
 		<link rel="stylesheet" href="js/slickgrid/dist/styles/css/slick-alpine-theme.css" type="text/css" />
-
-		<link rel="stylesheet" href="js/slickgrid/dist/styles/css/slick.grid.css" type="text/css" />
-		<link rel="stylesheet" href="js/slickgrid/dist/styles/css/slick-alpine-theme.css" type="text/css" />
+		<link rel="stylesheet" href="js/slickgrid/dist/styles/css/slick-icons.css" type="text/css" />
 
 		<!-- // tabler framework css files import -->
 		<link href="css/css-tabler/tabler.min.css?1692870487" rel="stylesheet" />
@@ -108,7 +106,13 @@
 				width: 210px;
 				height: 30px;
 			}
-			
+			.toggle {
+				cursor: pointer;
+				height: 1em;
+				width: 1em;
+				display: inline-block;
+				font-size: 15px;
+			}
 		</style>
 		<!-- litepicker library for making a datepicker -->
 		<script>
