--- a/src/main/resources/templates/views/wrk/bat/WRKBAT002M0.html
+++ b/src/main/resources/templates/views/wrk/bat/WRKBAT002M0.html
@@ -238,8 +238,8 @@ layout:decorate="~{layout/layout}"
 					, { id: "exePrd",		name: "Cycle",				field: "exePrd",		width: 80,	sortable: true,	editor: function (args) { return new ComboBoxEditor( args,[ { key: "Y", value: "Y" },{ key: "Q", value: "Q" },{ key: "M", value: "M" },] ); },headerCssClass: "slick-header-columns",cssClass: "slick-column-center" }
 					, { id: "mainEmpNo",	name: "Main User",			field: "mainEmpNo",		width: 100,	sortable: true,	editor: Slick.Editors.Text,validator: (value,args) => complexValidator(value,args,[ createValidator,noWhitespaceValidator,]),headerCssClass: "slick-header-columns",cssClass: "slick-column-center" }
 					, { id: "subEmpNo",		name: "Sub User",			field: "subEmpNo",		width: 100,	sortable: true,	editor: Slick.Editors.Text,validator: (value,args) => complexValidator(value,args,[ createValidator,noWhitespaceValidator,]),headerCssClass: "slick-header-columns",cssClass: "slick-column-center" }
-					, { id: "regUsrid",		name: "Registrant",			field: "regUsrid",		width: 100,	sortable: true,	editor: Slick.Editors.Text,headerCssClass: "slick-header-columns",cssClass: "slick-column-center"}
-					, { id: "regDt",		name: "Registration Date",	field: "regDt",			width: 120,	sortable: true,	editor: Slick.Editors.Text,headerCssClass: "slick-header-columns",cssClass: "slick-column-center"}
+					, { id: "frstRegEmpNo",	name: "Registrant",			field: "frstRegEmpNo",	width: 100,	sortable: true,	editor: Slick.Editors.Text,headerCssClass: "slick-header-columns",cssClass: "slick-column-center"}
+					, { id: "frstRegDtm",	name: "Registration Date",	field: "frstRegDtm",	width: 120,	sortable: true,	editor: Slick.Editors.Text,headerCssClass: "slick-header-columns",cssClass: "slick-column-center"}
 					];
 	
 		var options = {
