fix: fixed the opnsrv003 search logic

--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -113,6 +113,10 @@
 				display: inline-block;
 				font-size: 15px;
 			}
+			.no-top-border {
+				border-top: none !important;
+			}
+
 		</style>
 		<!-- litepicker library for making a datepicker -->
 		<script>
