--- a/src/main/resources/templates/views/opn/srv/OPNSRV003M0.html
+++ b/src/main/resources/templates/views/opn/srv/OPNSRV003M0.html
@@ -137,13 +137,13 @@
       $(document).ready(function () {
         console.log("Document is ready.");
         //화면 접속시 바로 조회
-        main();
+        getGridData();
         //send버튼 누르면, 조건적용하여 검색
-        $("#send").click(main);
+        $("#send").click(getGridData);
         //엔터키누르면, 조건적용하여 검색
         $("input").on("keyup", function (key) {
           if (key.keyCode == 13) {
-            main();
+            getGridData();
           }
         });
       });
@@ -167,26 +167,23 @@
 
       }
 
-
+     
       // slicgrid 관련 변수
       var grid;
       var dataView;
-      // var unqId = "csNo";
 
-      // var uniqueId = generateRandomId(data);
-      // console.log("uniqueId after the random id genaration: ", uniqueId)
-    
       var columns = [
-        {
-          id: "uniqueId",
-          name: "ID",
-          field: "uniqueId",
-          editor: Slick.Editors.Text,
-          validator: createValidator,
-          width: 10,
-          headerCssClass: "slick-header-columns",
-          cssClass: "slick-column-center",
-        },
+        // {
+        //   id: "uniqueId",
+        //   name: "ID",
+        //   field: "uniqueId",
+        //   visible: false, // to make the column invisible
+        //   editor: Slick.Editors.Text,
+        //   validator: createValidator,
+        //   width: 10,
+        //   headerCssClass: "slick-header-columns",
+        //   cssClass: "slick-column-center",
+        // },
         {
           id: "compNm",
           name: "Company Name",
@@ -201,6 +198,7 @@
           width: 170,
           headerCssClass: "slick-header-columns",
           cssClass: "slick-column-center",
+          formatter: companyNameFormatter,
         },
         {
           id: "srvcNm",
@@ -271,6 +269,40 @@
         },
       ];
 
+      function companyNameFormatter(row, cell, value, columnDef, dataContext) {
+        var dataView = grid.getData();
+        // Check if the current row's company name is the same as the previous row's
+
+        // we get the row inde
+        if (row > 0) {
+          var prevItem = dataView.getItem(row - 1);
+          if (prevItem && prevItem.compNm === value) {
+            // we return an emoty strng to hide the value of the cell
+            return "";
+          }
+        }
+        return value;
+      }
+
+      function applyCompanyNameCellStyles() {
+        var data = dataView.getItems();
+        var cellCssStyles = {};
+
+        // here we get the unique id of the row and apply the css style to the cell
+        for (var i = 1; i < data.length; i++) {
+          if (data[i].compNm === data[i - 1].compNm) {
+            var rowId = dataView.getIdxById(data[i].id); // Use your unique identifier
+            if (!cellCssStyles[rowId]) {
+              cellCssStyles[rowId] = {};
+            }
+            cellCssStyles[rowId]["compNm"] = "no-top-border";
+          }
+        }
+
+        grid.setCellCssStyles("companyNameCellStyles", cellCssStyles);
+      }
+
+
       var options = {
         enableCellNavigation: true,
         enableColumnReorder: false,
@@ -285,7 +317,6 @@
         asyncEditorLoading: false,
         autoEdit: false,
         autoEditNewRow: false,
-        //enableAutoResize: true
       };
 
       var newRowIds = 0;
@@ -309,24 +340,7 @@
         },
       };
 
-      function addSlickGridSomeStyling() {
-        const style = document.createElement("style");
-        style.innerHTML = `
-             .slick-header-columns {
-               font-family: San Francisco, Segoe UI, Roboto, Helvetica Neue, sans-serif;
-               font-size: 13px;
-               font-weight: bold;
-             }
-             .slick-cell {
-               font-family: San Francisco, Segoe UI, Roboto, Helvetica Neue, sans-serif;
-               font-size: 13px;
-             }
-           `;
-        document.head.appendChild(style);
-      }
-
-      function main() {
-        addSlickGridSomeStyling();
+      function getGridData() {
         // 그리드 초기화 및 데이터 로드
         console.log("Initializing SlickGrid...");
 
@@ -357,22 +371,17 @@
         dataView.onRowCountChanged.subscribe(function (e, args) {
           grid.updateRowCount();
           grid.render();
+          applyCompanyNameCellStyles();
         });
 
         dataView.onRowsChanged.subscribe(function (e, args) {
           grid.invalidate();
           grid.render();
+          applyCompanyNameCellStyles();
         });
 
-       
         // setItems의 두번째 argument를 통해 unique id에 해당하는 컬럼 지정가능
         dataView.setItems(data, "uniqueId");
-        console.log("dataView data: ", dataView.getItems());
-
-        // when "onBeforeSort" returns false, the "onSort" won't execute (for example a backend server error while calling backend query to sort)
-        // grid.onBeforeSort.subscribe(function (e, args) {
-        //   return true;
-        // });
 
         // 정렬 sorting
         grid.onSort.subscribe(function (e, args) {
@@ -660,6 +669,8 @@
           if (/^\d{3}$/.test(numbersOnly)) {
             numbersOnly
             return true;
+          } else if(input === "0") {
+            return true;
           } else {
             alert("Please enter a valid company code!");
             return false;
@@ -668,8 +679,7 @@
 
         // search function to make a fetch call to the server
         function searchFunction() {
-         
-
+          // we check if the user has selected a month and year
           if (
             $("#inputMonth").val() === "" &&
             $("#inputYear").val() === ""
@@ -687,15 +697,15 @@
           // these will be used to get the month and year from the user
           const month = document.getElementById("inputMonth").value;
           const year = document.getElementById("inputYear").value;
-          const conpanyCode = document.getElementById("companyCode").value || "001";
+          const conpanyCode = document.getElementById("companyCode").value || "0";
           const stdYymm = year + month.padStart(2, "0");
 
           console.log("we came here to search for the data: ", stdYymm, conpanyCode); 
           // validaion methoid will be tirggered
           inputValidation(conpanyCode)
 
-           // when the user clicks on the serach button, we update the gfrid data by making a call.
-           main();
+          // when the user clicks on the serach button, we update the gfrid data by making a call.
+          getGridData();
 
           // Send an AJAX GET request to the endpoint
           $.ajax({
@@ -727,8 +737,7 @@
         searchButton.addEventListener("click", searchFunction);
 
         $(document).ready(function () {
-          // we fetch the user subcrioption info
-          // getUserSubscriptionInfo();
+          // in the first load, we trigger the search function
           searchFunction();
         });
       });
